--- a/Contact.html
+++ b/Contact.html
@@ -20,6 +20,8 @@
 <input type="email" name="youremail:" value=""><br>
 <label for="">Phone:</label>
 <input type="number" name="yournumber" value=""><br>
+<label for="">Upload File</label><br>
+<input type="file" name="yourfile" value=""><br>
 <label for="">Your Message:</label><br>
 <textarea name="yourmessage" rows="8" cols="80"></textarea><br>
 <input type="submit">
@@ -27,3 +29,4 @@
    <a href="index.html"><strong>Home page</strong></a>
   </body>
 </html>
+
